# connect-four

./: .gitignore  CMakeLists.txt  Makefile  README.md  bld.sh  submit
assets/: logo.txt  logo1.txt  logo2.txt
documentation/: .gitignore  doc.tex  documentation.docx  documentation.tex
documentation/tex/: titlepage.tex
src/: board.cpp  board.h  color.h  extras.cpp  extras.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h
